# hallabong

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
src/: general.rs  main.rs
src/framework/: error.rs  handler.rs  help.rs  mod.rs
src/framework/emoji/: flags.rs  mod.rs  utils.rs
src/framework/groups/: general.rs  hooks.rs  mod.rs  music.rs  translate.rs
