[package]
name = "hallabong"
authors = ["Joosung Park <iam@hyperlapse.dev>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
env_logger = "0.9.0"
log = "0.4.14"
serenity = { version = "0.10.9", default-features = false, features = ["client", "standard_framework", "voice", "gateway", "model", "rustls_backend", "cache"] }
songbird = { version = "0.2.0", features = ["serenity-rustls", "builtin-queue"] }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
google-translate3 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
html-escape = "0.2.9"
dotenv = "0.15.0"
