[package]
name = "hallabong"
authors = ["Joosung Park <iam@hyperlapse.dev>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "^0.1.51"
env_logger = "^0.10.0"
log = "^0.4.14"
serenity = { version = "^0.11.5", default-features = false, features = ["client", "standard_framework", "voice", "gateway", "model", "rustls_backend", "cache"] }
songbird = { version = "^0.3.2", features = ["serenity-rustls", "builtin-queue"] }
thiserror = "^1.0.29"
tokio = { version = "^1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "^0.1"
tracing-futures = "^0.2"
tracing-subscriber = "^0.3.17"
google-translate3 = { version = "*", optional = true }
hyper = "^0.14"
hyper-rustls = "0.24.0"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = { version = "8.3.0", optional = true }
html-escape = "0.2.9"
dotenv = "0.15.0"

[features]
translate = ["dep:google-translate3", "dep:yup-oauth2"]
